added ticket view and sample tickets to the server

--- a/src/style/kanban-board-view.less
+++ b/src/style/kanban-board-view.less
@@ -32,6 +32,8 @@
         top: 50%;
         transform: translate(-50%, -50%);
         background-color: #e8e8e8;
+        overflow-y: auto;
+        overflow-x: hidden;
       }
     }
 
