--- a/src/style/kanban-board-view.less
+++ b/src/style/kanban-board-view.less
@@ -31,9 +31,13 @@
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
-        background-color: #e8e8e8;
+        background-color: #f2f2f2;
         overflow-y: auto;
         overflow-x: hidden;
+
+        border-top-left-radius: 10px;
+        border-bottom-left-radius: 10px;
+        box-shadow: 3px 3px 1px #afafaf;
       }
     }
 
