--- a/src/style/ticket-view.less
+++ b/src/style/ticket-view.less
@@ -2,20 +2,38 @@
   position: relative;
   margin: 10px;
   border: 1px solid white;
-  border-radius: 5px;
+  border-radius: 15px;
   padding: 10px;
   text-align: left;
+  box-shadow: 3px 3px 1px #a9a9a9;
 
-  .ticket-id {
+  background: linear-gradient(to bottom, white, #e8e8e8);
 
+  .ticket-header {
+    position: relative;
+
+    .ticket-id {
+      font-weight: bold;
+      &:before {
+        content: '#'
+      }
+    }
+    .ticket-owner {
+      float: right;
+      font-style: italic;
+      &:before {
+        content: 'owner: ';
+      }
+    }
   }
-  .ticket-owner {
 
-  }
   .ticket-title {
-
+    text-align: center;
+    font-size: 14px;
   }
   .ticket-description {
-
+    margin: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
   }
 }
