added redmine api and integration added filter saving filter to localstorage

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -13,10 +13,10 @@ html, body, div, span, li, ol, ul {
 }
 
 body {
-  line-height: 1;
+  //position: absolute;
+  //line-height: 1;
   height: 100%;
   width: 100%;
-  position: absolute;
 }
 
 ol, ul {
@@ -28,3 +28,4 @@ table {
 }
 
 @import 'kanban-board-view';
+@import 'kanban-components';
