--- a/src/style/kanban-board-view.less
+++ b/src/style/kanban-board-view.less
@@ -1,54 +1,24 @@
 .kanban-board-view {
 
-    position: relative;
+    font-family: "Trebuchet MS", Verdana, sans-serif;
+    font-size: 14px;
+
+    position: absolute;
     height: 100%;
     width: 100%;
 
   .kanban-columns-wrapper {
 
-    position: relative;
+    position: absolute;
+    display: inline-block;
     height: 90%;
     width: 90%;
 
     left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-
-    .kanban-column {
-      display: inline-block;
-      position: relative;
-      width: 33%;
-      height: 90%;
-      top: 50%;
-      transform: translateY(-50%);
-      text-align: center;
-      border-right: 1px solid lightblue;
-
-      .kanban-column-content {
-        position: relative;
-        width: 90%;
-        height: 90%;
-        left: 50%;
-        top: 50%;
-        transform: translate(-50%, -50%);
-        background-color: #f2f2f2;
-        overflow-y: auto;
-        overflow-x: hidden;
-
-        border-top-left-radius: 10px;
-        border-bottom-left-radius: 10px;
-        box-shadow: 3px 3px 1px #afafaf;
-      }
-    }
-
-    .first-column {
-      border-left: 1px solid lightblue;
-    }
-
-    .lastColumn {
-
-    }
+    top: 60px;
+    transform: translateX(-50%);
   }
 }
 
-@import 'ticket-view';
+@import 'kanban-filter-view';
+@import 'kanban-column-view';
