--- a/src/style/ticket-view.less
+++ b/src/style/ticket-view.less
@@ -1,7 +1,6 @@
 .ticket-view {
   position: relative;
   margin: 10px;
-  border: 1px solid white;
   border-radius: 15px;
   padding: 10px;
   text-align: left;
@@ -14,6 +13,8 @@
 
     .ticket-id {
       font-weight: bold;
+      color: #33acfe;
+
       &:before {
         content: '#'
       }
@@ -30,10 +31,11 @@
   .ticket-title {
     text-align: center;
     font-size: 14px;
+    font-weight: bold;
+    margin: 5px 0 5px 0;
   }
   .ticket-description {
     margin: 5px;
-    font-family: Arial, Helvetica, sans-serif;
     font-size: 12px;
   }
 }
