more styling added  a footer and a status to tickets

--- a/src/style/ticket-view.less
+++ b/src/style/ticket-view.less
@@ -37,5 +37,14 @@
   .ticket-description {
     margin: 5px;
     font-size: 12px;
+    overflow-x: auto;
+  }
+
+  .ticket-status {
+    text-align: right;
+    font-weight: bold;
+    color: #33acfe;
+    font-style: italic;
+    font-size: 12px;
   }
 }
