styling click on ticket numbers click on ticket title to collapse description

--- a/src/style/kanban-components.less
+++ b/src/style/kanban-components.less
@@ -9,6 +9,12 @@
 
   &:hover {
     cursor: pointer;
+    color: #2e75b1;
+  }
+
+  &:active {
+    color: lightgrey;
+    box-shadow: none;
   }
 }
 
