--- a/src/style/ticket-view.less
+++ b/src/style/ticket-view.less
@@ -14,6 +14,15 @@
     .ticket-id {
       font-weight: bold;
       color: #33acfe;
+      cursor: pointer;
+
+      &:hover {
+        color: #2e75b1;
+      }
+
+      &:active {
+        color: lightgrey;
+      }
 
       &:before {
         content: '#'
@@ -33,6 +42,15 @@
     font-size: 14px;
     font-weight: bold;
     margin: 5px 0 5px 0;
+    cursor: pointer;
+
+    &:hover {
+      color: #2e75b1;
+    }
+
+    &:active {
+      color: lightgrey;
+    }
   }
   .ticket-description {
     margin: 5px;
