--- a/src/style/kanban-column-view.less
+++ b/src/style/kanban-column-view.less
@@ -7,7 +7,7 @@
   border-right: 1px solid lightgrey;
 
   .kanban-column-title {
-    color: #33acfe;
+    color: @light-blue;
   }
 
   .kanban-column-content {
@@ -17,13 +17,13 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    background-color: #f2f2f2;
+    background-color: @background-grey;
     overflow-y: auto;
     overflow-x: hidden;
 
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    box-shadow: 3px 3px 1px #afafaf;
+    box-shadow: 3px 3px 1px @box-shaddow-light;
   }
 }
 
