--- a/src/style/ticket-view.less
+++ b/src/style/ticket-view.less
@@ -4,20 +4,27 @@
   border-radius: 15px;
   padding: 10px;
   text-align: left;
-  box-shadow: 3px 3px 1px #a9a9a9;
+  box-shadow: 3px 3px 1px @box-shaddow-light;
 
-  background: linear-gradient(to bottom, white, #e8e8e8);
+  &:hover {
+    box-shadow: 5px 5px 2px @box-shaddow-light;
+  }
+
+  background: linear-gradient(to bottom, white, @gradient-grey);
 
   .ticket-header {
     position: relative;
+    width: 100%;
 
     .ticket-id {
-      font-weight: bold;
-      color: #33acfe;
+      position: absolute;
+      top: 0;
+      left: 0;
+      color: grey;
       cursor: pointer;
 
       &:hover {
-        color: #2e75b1;
+        color: @light-blue;
       }
 
       &:active {
@@ -28,41 +35,68 @@
         content: '#'
       }
     }
-    .ticket-owner {
-      float: right;
-      font-style: italic;
-      &:before {
-        content: 'owner: ';
+
+    .ticket-title {
+      position: relative;
+      font-weight: bold;
+      margin: 0px 10px 5px 10px;
+      cursor: pointer;
+      color: @dark-blue;
+      width: calc(~'100% - 67px');
+      left: 38px;
+      display: inline-block;
+      text-align: left;
+
+      &:hover {
+        color: @light-blue;
+      }
+
+      &:active {
+        color: lightgrey;
       }
     }
-  }
 
-  .ticket-title {
-    text-align: center;
-    font-size: 14px;
-    font-weight: bold;
-    margin: 5px 0 5px 0;
-    cursor: pointer;
-
-    &:hover {
-      color: #2e75b1;
+    &.expanded {
+      &:after {
+        content: '-';
+      }
     }
 
-    &:active {
-      color: lightgrey;
+    &:after {
+      content: '+';
+      position: absolute;
+      display: inline-block;
+      right: 2px;
+      top: 0;
+      color: grey;
+      font-weight: bold;
+      //cursor: pointer;
     }
   }
+
   .ticket-description {
     margin: 5px;
     font-size: 12px;
     overflow-x: auto;
   }
 
-  .ticket-status {
-    text-align: right;
-    font-weight: bold;
-    color: #33acfe;
-    font-style: italic;
-    font-size: 12px;
+  .ticket-footer {
+    position: relative;
+    width: 100%;
+
+    .ticket-owner {
+      font-style: italic;
+      font-size: 12px;
+      color: grey;
+      &:before {
+        content: 'owner: ';
+      }
+    }
+    .ticket-status {
+      float: right;
+      color: lightgrey;
+      font-style: italic;
+      font-size: 12px;
+    }
   }
 }
