styling and animation

--- a/src/style/ticket-view.less
+++ b/src/style/ticket-view.less
@@ -46,6 +46,7 @@
       left: 38px;
       display: inline-block;
       text-align: left;
+      overflow-x: hidden;
 
       &:hover {
         color: @light-blue;
