--- a/src/style/index.less
+++ b/src/style/index.less
@@ -10,6 +10,12 @@ html, body, div, span, li, ol, ul {
   margin: 0;
   padding: 0;
   border: 0;
+
+  cursor: default;
+  
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
 }
 
 body {
@@ -26,6 +32,7 @@ ol, ul {
 table {
 	border-spacing: 0;
 }
+
 @import 'mixins';
 @import 'kanban-board-view';
 @import 'kanban-components';
