--- a/src/style/kanban-column-view.less
+++ b/src/style/kanban-column-view.less
@@ -17,13 +17,13 @@
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
-    background-color: @background-grey;
+    //background-color: @background-grey;
     overflow-y: auto;
     overflow-x: hidden;
 
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    box-shadow: 3px 3px 1px @box-shaddow-light;
+    //box-shadow: 3px 3px 1px @box-shaddow-light;
   }
 }
 
