added fontawesome improved build process

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -10,12 +10,6 @@ html, body, div, span, li, ol, ul {
   margin: 0;
   padding: 0;
   border: 0;
-
-  cursor: default;
-  
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
 }
 
 body {
@@ -33,6 +27,7 @@ table {
 	border-spacing: 0;
 }
 
+@import 'fontawesome/less/font-awesome';
 @import 'mixins';
 @import 'kanban-board-view';
 @import 'kanban-components';
