--- a/src/style/kanban-column-view.less
+++ b/src/style/kanban-column-view.less
@@ -4,10 +4,11 @@
   width: 33%;
   height: 100%;
   text-align: center;
-  border-right: 1px solid lightgrey;
+  box-shadow: 0px 20px 5px lightgrey inset;
 
   .kanban-column-title {
-    color: @light-blue;
+    .unselectable;
+    color: white;
   }
 
   .kanban-column-content {
@@ -28,11 +29,11 @@
 }
 
 .first-column {
-  border-left: 1px solid lightgrey;
+  border-top-left-radius: 20px;
 }
 
-.lastColumn {
-
+.last-column {
+  border-top-right-radius: 20px;
 }
 
 @import 'ticket-view';
