--- a/src/style/kanban-components.less
+++ b/src/style/kanban-components.less
@@ -1,4 +1,5 @@
 .kanban-button {
+  .unselectable;
   font-size: 14px;
   padding: 5px 13px 5px 13px;
   text-align: center;
@@ -15,22 +16,24 @@
 
   &:active {
     color: lightgrey;
-    box-shadow: none;
+    box-shadow: 0px 1px 1px 1px @box-shaddow-light inset;
   }
 }
 
 .kanban-input {
   border-radius: 20px;
-  border: 1px solid #d8d8d8;
-  background: linear-gradient(to top, white, @gradient-grey);
+  border: 1px solid @gradient-grey;
+  background: linear-gradient(to bottom, white, @gradient-grey);
   outline: none;
   padding: 5px 10px 5px 10px;
   width: 200px;
   color: grey;
   font-size: 14px;
+  box-shadow: 0px 1px 1px 1px @box-shaddow-light inset;
 }
 
 .kanban-label {
+  .unselectable;
   font-size: 14px;
   padding: 5px 10px 5px 10px;
   color: grey;
