--- a/src/style/kanban-filter-view.less
+++ b/src/style/kanban-filter-view.less
@@ -18,4 +18,12 @@
   .team-input {
     margin-right: 20px;
   }
+
+  .filter-button {
+    margin-right: 10px;
+  }
+
+  .fa-spinner {
+    color: grey;
+  }
 }
