--- a/src/style/mixins.less
+++ b/src/style/mixins.less
@@ -3,3 +3,14 @@
 @gradient-grey: #e8e8e8;
 @box-shaddow-light: #a9a9a9;
 @background-grey: #f2f2f2;
+
+.unselectable {
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  cursor: default;
+}
+
+.hidden {
+  visibility: hidden;
+}
