--- a/src/style/ticket-view.less
+++ b/src/style/ticket-view.less
@@ -17,6 +17,7 @@
     width: 100%;
 
     .ticket-id {
+      .unselectable;
       position: absolute;
       top: 0;
       left: 0;
@@ -37,6 +38,7 @@
     }
 
     .ticket-title {
+      .unselectable;
       position: relative;
       font-weight: bold;
       margin: 0px 10px 5px 10px;
@@ -86,6 +88,7 @@
     width: 100%;
 
     .ticket-owner {
+      .unselectable;
       font-style: italic;
       font-size: 12px;
       color: grey;
@@ -94,6 +97,7 @@
       }
     }
     .ticket-status {
+      .unselectable;
       float: right;
       color: lightgrey;
       font-style: italic;
