--- a/src/style/side-navigation-view.less
+++ b/src/style/side-navigation-view.less
@@ -1,6 +1,48 @@
 .side-navigation-view {
+  z-index: 2;
   position: absolute;
-  .navigation-item {
+  background: linear-gradient(to bottom, white, @gradient-grey);
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  box-shadow: 2px 2px 2px @box-shaddow-light;
+  //margin-left: -3px;
+  top: 50%;
+  left: -3px;
+  transform: translateY(-50%);
 
+  &:hover {
+    box-shadow: 5px 5px 5px @box-shaddow-light;
+  }
+
+  &:after {
+    font-family: FontAwesome;
+    content: '\f142';
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    color: grey;
+  }
+
+  .navigation-item {
+    .unselectable;
+    color: @dark-blue;
+    margin: 5px 15px 5px 10px;
+    padding: 5px 15px 5px 10px;
+    border-radius: 20px;
+
+    i {
+      margin-right: 5px;
+    }
+
+    &:hover {
+      color: @light-blue;
+      cursor: pointer;
+    }
+
+    &:active {
+      box-shadow: 0px 1px 1px 1px @box-shaddow-light inset;
+      color: lightgrey;
+    }
   }
 }
