rewrote redmine api added filter to team view

--- a/src/style/kanban-filter-view.less
+++ b/src/style/kanban-filter-view.less
@@ -5,17 +5,10 @@
   transform: translateX(-50%);
   margin: 10px;
 
-  .key-label {
+  .kanban-label {
     margin-right: 10px;
   }
-  .key-input {
-    margin-right: 20px;
-  }
-
-  .team-label {
-    margin-right: 10px;
-  }
-  .team-input {
+  .kanban-input {
     margin-right: 20px;
   }
 
