added ticket view

--- a/src/style/kanban-board-view.less
+++ b/src/style/kanban-board-view.less
@@ -4,6 +4,8 @@
     position: absolute;
     height: 100%;
     width: 100%;
+    min-height: 720px;
+    min-width: 1280px;
     //text-shadow: 0 1px 1px #fff;
 
   .kanban-columns-wrapper {
