--- a/src/style/ticket-view.less
+++ b/src/style/ticket-view.less
@@ -5,6 +5,7 @@
   padding: 10px;
   text-align: left;
   box-shadow: 3px 3px 1px @box-shaddow-light;
+  min-width: 150px;
 
   &:hover {
     box-shadow: 5px 5px 2px @box-shaddow-light;
@@ -92,9 +93,6 @@
       font-style: italic;
       font-size: 12px;
       color: grey;
-      &:before {
-        content: 'owner: ';
-      }
     }
     .ticket-status {
       .unselectable;
