added indication to selected menu item added support to ticket config

--- a/src/style/side-navigation-view.less
+++ b/src/style/side-navigation-view.less
@@ -1,4 +1,6 @@
 .side-navigation-view {
+  font-family: "Trebuchet MS", Verdana, sans-serif;
+  font-size: 14px;
   z-index: 2;
   position: absolute;
   background: linear-gradient(to bottom, white, @gradient-grey);
@@ -44,5 +46,8 @@
       box-shadow: 0px 1px 1px 1px @box-shaddow-light inset;
       color: lightgrey;
     }
+  }
+  .selected {
+    background: linear-gradient(to bottom, white,  @gradient-grey);
   }
 }
