--- a/src/style/side-navigation-view.less
+++ b/src/style/side-navigation-view.less
@@ -48,6 +48,7 @@
     }
   }
   .selected {
-    background: linear-gradient(to bottom, white,  @gradient-grey);
+    box-shadow: 0px 1px 1px 1px @box-shaddow-light inset;
+    color: grey;
   }
 }
