--- a/src/style/kanban-board-view.less
+++ b/src/style/kanban-board-view.less
@@ -17,6 +17,11 @@
     left: 50%;
     top: 60px;
     transform: translateX(-50%);
+
+    background: linear-gradient(to bottom, white, @gradient-grey);
+    border-radius: 20px;
+
+    overflow: hidden;
   }
 }
 
