added filter view but it still doesnt work

--- a/src/style/kanban-board-view.less
+++ b/src/style/kanban-board-view.less
@@ -6,7 +6,7 @@
     width: 100%;
     min-height: 720px;
     min-width: 1280px;
-    //text-shadow: 0 1px 1px #fff;
+    overflow: hidden;
 
   .kanban-columns-wrapper {
     position: absolute;
@@ -25,6 +25,7 @@
   }
 }
 
+@import 'column-filter-view';
 @import 'side-navigation-view';
 @import 'kanban-filter-view';
 @import 'kanban-column-view';
