--- a/src/style/kanban-board-view.less
+++ b/src/style/kanban-board-view.less
@@ -8,6 +8,15 @@
     min-width: 1280px;
     overflow: hidden;
 
+  .kanban-board-title {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    color: lightgrey;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
   .kanban-columns-wrapper {
     position: absolute;
     display: inline-block;
