--- a/src/style/index.less
+++ b/src/style/index.less
@@ -1,9 +1,9 @@
 html {
-  box-sizing: 'border-box';
+  .box-sizing('border-box');
 }
 
 *, *:before, *:after {
-  box-sizing: inherit;
+  .box-sizing(inherit);
 }
 
 html, body, div, span, li, ol, ul {
