--- a/src/style/kanban-column-view.less
+++ b/src/style/kanban-column-view.less
@@ -3,6 +3,7 @@
   position: relative;
   height: 100%;
   text-align: center;
+  vertical-align: top;
 
   .kanban-column-title {
     position: relative;
@@ -15,7 +16,7 @@
   .kanban-column-content {
     position: relative;;
     width: 100%;
-    height: calc(~'100% - 20px');
+    .calc(height, '100% - 20px');
     overflow-y: auto;
     overflow-x: hidden;
   }
