--- a/src/style/kanban-filter-view.less
+++ b/src/style/kanban-filter-view.less
@@ -1,8 +1,7 @@
 .kanban-filter-view {
   position: relative;
   display: inline-block;
-  left: 50%;
-  transform: translateX(-50%);
+  .center-x;
   margin: 10px;
 
   .kanban-label {
