--- a/src/style/side-navigation-view.less
+++ b/src/style/side-navigation-view.less
@@ -3,17 +3,16 @@
   font-size: 14px;
   z-index: 2;
   position: absolute;
-  background: linear-gradient(to bottom, white, @gradient-grey);
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-  box-shadow: 2px 2px 2px @box-shaddow-light;
-  //margin-left: -3px;
-  top: 50%;
+  .gradient;
+  .border-radiuses(20px, 20px, 0, 0);
+
+  .box-shadow-small;
+
   left: -3px;
-  transform: translateY(-50%);
+  .center-y;
 
   &:hover {
-    box-shadow: 5px 5px 5px @box-shaddow-light;
+    .box-shadow-big;
   }
 
   &:after {
@@ -21,8 +20,7 @@
     content: '\f142';
     position: absolute;
     right: 5px;
-    top: 50%;
-    transform: translateY(-50%);
+    .center-y;
     color: grey;
   }
 
@@ -31,7 +29,7 @@
     color: @dark-blue;
     margin: 5px 15px 5px 10px;
     padding: 5px 15px 5px 10px;
-    border-radius: 20px;
+    .border-radius(20px);
 
     i {
       margin-right: 5px;
@@ -43,12 +41,12 @@
     }
 
     &:active {
-      box-shadow: 0px 1px 1px 1px @box-shaddow-light inset;
+      .box-shadow-inner;
       color: lightgrey;
     }
   }
   .selected {
-    box-shadow: 0px 1px 1px 1px @box-shaddow-light inset;
+    .box-shadow-inner;
     color: grey;
   }
 }
