--- a/src/style/mixins.less
+++ b/src/style/mixins.less
@@ -33,6 +33,7 @@
   box-shadow: 5px 5px 5px @box-shaddow-light;
 }
 
+
 .center-y(){
   top: 50%;
   -webkit-transform: translate(0,-50%);
@@ -139,6 +140,7 @@
 	-moz-transform: 	 @string;
 	-ms-transform: 		 @string;
 	-o-transform: 		 @string;
+  transform:         @string;
 }
 .rotate (@deg) {
 	-webkit-transform: rotate(@deg);
