--- a/src/style/kanban-filter-view.less
+++ b/src/style/kanban-filter-view.less
@@ -4,17 +4,18 @@
   .center-x;
   margin: 10px;
 
+  .kanban-link {
+    margin-right: 10px;
+  }
   .kanban-label {
     margin-right: 10px;
   }
   .kanban-input {
     margin-right: 20px;
   }
-
   .filter-button {
     margin-right: 10px;
   }
-
   .fa-spinner {
     color: grey;
   }
