added new view for unassigned issues

--- a/src/style/kanban-filter-view.less
+++ b/src/style/kanban-filter-view.less
@@ -14,7 +14,11 @@
     margin-right: 20px;
   }
   .filter-button {
+    font-size: 12px;
     margin-right: 10px;
+    .fa-refresh {
+      margin-right: 5px;
+    }
   }
   .fa-spinner {
     color: grey;
