added counter to columns

--- a/src/style/kanban-column-view.less
+++ b/src/style/kanban-column-view.less
@@ -11,6 +11,13 @@
     color: white;
     height: 20px;
     width: 100%;
+
+    .counter {
+      position: absolute;
+      top: 3px;
+      right: 15px;
+      font-size: 10px;
+    }
   }
 
   .kanban-column-content {
