--- a/src/style/kanban-board-view.less
+++ b/src/style/kanban-board-view.less
@@ -1,6 +1,6 @@
 .kanban-board-view {
     font-family: "Trebuchet MS", Verdana, sans-serif;
-    font-size: 14px;
+    font-size: 12px;
     position: absolute;
     height: 100%;
     width: 100%;
@@ -27,13 +27,13 @@
     top: 60px;
     .center-x;
     .gradient;
-    .border-radius(20px);
+    .border-radius(7px);
 
     overflow: hidden;
   }
 }
 
-@import 'column-filter-view';
+@import 'ticket-filter-view';
 @import 'side-navigation-view';
 @import 'kanban-filter-view';
 @import 'kanban-column-view';
