--- a/src/style/ticket-view.less
+++ b/src/style/ticket-view.less
@@ -22,7 +22,7 @@
       position: relative;;
       color: grey;
       cursor: pointer;
-      width: 45px;
+      width: 35px;
       display: inline-block;
       vertical-align: top;
 
@@ -40,7 +40,7 @@
       position: relative;
       cursor: pointer;
       color: @dark-blue;
-      .calc(width, '100% - 50px');
+      .calc(width, '100% - 40px');
       display: inline-block;
       text-align: left;
       overflow-x: hidden;
@@ -91,6 +91,7 @@
   .ticket-footer {
     position: relative;
     width: 100%;
+    font-size: 10px;
 
     .ticket-owner {
       .unselectable;
