fix top filter layouting issue

--- a/src/style/kanban-components.less
+++ b/src/style/kanban-components.less
@@ -39,6 +39,7 @@
   color: @dark-blue;
   text-decoration: underline;
   padding: 5px 10px 5px 10px;
+  display: inline-block;
 
   &:hover {
     color: @light-blue;
