made only description selectable

--- a/src/style/mixins.less
+++ b/src/style/mixins.less
@@ -8,7 +8,16 @@
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+  user-select: none;
   cursor: default;
+}
+
+.selectable {
+  -moz-user-select: auto;
+  -webkit-user-select: auto;
+  -ms-user-select: auto;
+  user-select: auto;
+  cusror: auto;
 }
 
 .hidden {
