--- a/src/style/index.less
+++ b/src/style/index.less
@@ -13,8 +13,7 @@ html, body, div, span, li, ol, ul {
 }
 
 body {
-  //position: absolute;
-  //line-height: 1;
+  .unselectable;
   height: 100%;
   width: 100%;
 }
