--- a/src/style/ticket-view.less
+++ b/src/style/ticket-view.less
@@ -18,7 +18,6 @@
     width: 100%;
 
     .ticket-id {
-      .unselectable;
       position: relative;;
       color: grey;
       cursor: pointer;
@@ -36,7 +35,6 @@
     }
 
     .ticket-title {
-      .unselectable;
       position: relative;
       cursor: pointer;
       color: @dark-blue;
@@ -85,6 +83,7 @@
   }
 
   .ticket-description {
+    .selectable;
     overflow-x: auto;
   }
 
@@ -94,12 +93,10 @@
     font-size: 10px;
 
     .ticket-owner {
-      .unselectable;
       font-style: italic;
       color: grey;
     }
     .ticket-status {
-      .unselectable;
       float: right;
       color: lightgrey;
       font-style: italic;
