added detailed view

--- a/src/style/index.less
+++ b/src/style/index.less
@@ -28,5 +28,8 @@ table {
 
 @import 'fontawesome/less/font-awesome';
 @import 'mixins';
+@import 'side-navigation-view';
+@import 'kanban-filter-view';
 @import 'kanban-board-view';
+@import 'detailed-view';
 @import 'kanban-components';
