fixed .selectable in firefox added new icon for detailed view

--- a/src/style/mixins.less
+++ b/src/style/mixins.less
@@ -13,10 +13,10 @@
 }
 
 .selectable {
-  -moz-user-select: auto;
-  -webkit-user-select: auto;
-  -ms-user-select: auto;
-  user-select: auto;
+  -moz-user-select: text;
+  -webkit-user-select: text;
+  -ms-user-select: text;
+  user-select: text;
   cusror: auto;
 }
 
