--- a/src/style/detailed-view.less
+++ b/src/style/detailed-view.less
@@ -32,48 +32,18 @@
     overflow: auto;
 
     table {
+      position: relative;
     	background: #f5f5f5;
     	border-collapse: separate;
-    	box-shadow: inset 0 1px 0 #fff;
-    	font-size: 12px;
-    	line-height: 24px;
-    	margin: 30px auto;
     	text-align: left;
+      .center-x;
     }
 
     th {
-    	background: linear-gradient(#777, #444);
-    	border-left: 1px solid #555;
-    	border-right: 1px solid #777;
-    	border-top: 1px solid #555;
-    	border-bottom: 1px solid #333;
-    	box-shadow: inset 0 1px 0 #999;
-    	color: #fff;
-      font-weight: bold;
-    	padding: 10px 15px;
+    	background-color: @light-blue;
+    	color: white;
+    	padding: 5px 10px;
     	position: relative;
-    	text-shadow: 0 1px 0 #000;
-    }
-
-    th:after {
-    	background: linear-gradient(rgba(255,255,255,0), rgba(255,255,255,.08));
-    	content: '';
-    	display: block;
-    	height: 25%;
-    	left: 0;
-    	margin: 1px 0 0 0;
-    	position: absolute;
-    	top: 25%;
-    	width: 100%;
-    }
-
-    th:first-child {
-    	border-left: 1px solid #777;
-    	box-shadow: inset 1px 1px 0 #999;
-    }
-
-    th:last-child {
-    	box-shadow: inset -1px 1px 0 #999;
     }
 
     td {
@@ -81,9 +51,10 @@
     	border-left: 1px solid #e8e8e8;
     	border-top: 1px solid #fff;
     	border-bottom: 1px solid #e8e8e8;
-    	padding: 10px 15px;
+    	padding: 5px 10px;
     	position: relative;
     	transition: all 300ms;
+      color: grey;
     }
 
     td:first-child {
@@ -117,7 +88,7 @@
     }
 
     tbody:hover tr:hover td {
-    	color: #444;
+    	color: grey;
     	text-shadow: 0 1px 0 #fff;
     }
   }
