--- a/src/style/detailed-view.less
+++ b/src/style/detailed-view.less
@@ -33,10 +33,16 @@
 
     table {
       position: relative;
-    	background: #f5f5f5;
-    	border-collapse: separate;
-    	text-align: left;
+      background: #f5f5f5;
+      border-collapse: separate;
+      text-align: left;
       .center-x;
+
+      .ticket {
+        .ctxt {
+          text-align: center;
+        }
+      }
     }
 
     th {
@@ -54,7 +60,7 @@
     	padding: 5px 10px;
     	position: relative;
     	transition: all 300ms;
-      color: grey;
+        color: grey;
     }
 
     td:first-child {
