finished infrastructure for drag and drop

--- a/src/style/mixins.less
+++ b/src/style/mixins.less
@@ -20,6 +20,11 @@
   cusror: auto;
 }
 
+.draggable {
+  -webkit-user-drag: element;
+  -khtml-user-drag: element;
+}
+
 .hidden {
   visibility: hidden;
 }
