--- a/src/style/kanban-column-view.less
+++ b/src/style/kanban-column-view.less
@@ -27,6 +27,10 @@
     overflow-y: auto;
     overflow-x: hidden;
   }
+
+  .dragover {
+    border: 1px dashed grey;
+  }
 }
 
 @import 'ticket-view';
