--- a/src/style/ticket-view.less
+++ b/src/style/ticket-view.less
@@ -101,5 +101,29 @@
       color: lightgrey;
       font-style: italic;
     }
+
+    .low-priority {
+      //.gradient(#fefefe, #e4ffe0);
+      color: lightgrey;
+    }
+
+    .normal-priority {
+      color: grey;
+    }
+
+    .high-priority {
+      //.gradient(#fefefe, #ffffc8);
+      color: #ffbf49;
+    }
+
+    .urgent-priority {
+      //.gradient(#fefefe, #ffe6b8);
+      color: #f77e57;
+    }
+
+    .immediate-priority {
+      //.gradient(#fefefe, #fbc5c5);
+      color: #ff6262;
+    }
   }
 }
