added styling to description of a ticket

--- a/src/style/ticket-view.less
+++ b/src/style/ticket-view.less
@@ -85,6 +85,12 @@
   .ticket-description {
     .selectable;
     overflow-x: auto;
+	background-color: #fdfdfd;
+    border-radius: 5px;
+    box-shadow: 0 0 5px #303030 inset;
+    padding: 5px;
+    margin-bottom: 5px;
+    margin-top: 5px;
   }
 
   .ticket-footer {
